@@ -2,18 +2,16 @@ package it.pagopa.pn.delivery.middleware.notificationdao;
 
 import it.pagopa.pn.commons.exceptions.PnInternalException;
 import it.pagopa.pn.delivery.generated.openapi.server.v1.dto.*;
-import it.pagopa.pn.delivery.middleware.notificationdao.entities.DocumentAttachmentEntity;
-import it.pagopa.pn.delivery.middleware.notificationdao.entities.NotificationEntity;
-import it.pagopa.pn.delivery.middleware.notificationdao.entities.NotificationRecipientEntity;
+import it.pagopa.pn.delivery.middleware.notificationdao.entities.*;
 import it.pagopa.pn.delivery.models.InternalNotification;
-import org.modelmapper.ModelMapper;
-import org.modelmapper.convention.MatchingStrategies;
 import org.springframework.stereotype.Component;
+import org.springframework.util.CollectionUtils;
+import org.springframework.util.StringUtils;
 
 import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 import static it.pagopa.pn.delivery.exception.PnDeliveryExceptionCodes.ERROR_CODE_DELIVERY_UNSUPPORTED_PHYSICALCOMMUNICATIONTYPE;
 
@@ -29,13 +27,13 @@ public class EntityToDtoNotificationMapper {
         }
 
     	List<String> recipientIds = entity.getRecipients().stream().map( NotificationRecipientEntity::getRecipientId )
-                .collect(Collectors.toList());
+                .toList();
 
         return new InternalNotification(FullSentNotification.builder()
                 .senderDenomination( entity.getSenderDenomination() )
                 ._abstract( entity.getNotificationAbstract() )
                 .senderTaxId( entity.getSenderTaxId() )
-                .notificationFeePolicy( FullSentNotification.NotificationFeePolicyEnum.fromValue( entity.getNotificationFeePolicy().getValue() ))
+                .notificationFeePolicy( NotificationFeePolicy.fromValue( entity.getNotificationFeePolicy().getValue() ))
                 .iun( entity.getIun() )
                 .subject( entity.getSubject() )
                 .sentAt( entity.getSentAt().atOffset( ZoneOffset.UTC ) )
@@ -46,27 +44,70 @@ public class EntityToDtoNotificationMapper {
                 .physicalCommunicationType( entity.getPhysicalCommunicationType() )
                 .group( entity.getGroup() )
                 .senderPaId( entity.getSenderPaId() )
-                .recipients( entity2RecipientDto( entity.getRecipients() ) )
+                .recipients( entity2RecipientsDto( entity.getRecipients() ) )
                 .documents( buildDocumentsList( entity ) )
                 .amount(entity.getAmount())
                 .paymentExpirationDate(entity.getPaymentExpirationDate())
                 .taxonomyCode( entity.getTaxonomyCode() )
-                .build()
-        , recipientIds );
+                .pagoPaIntMode(  getSafePagoPaIntMode( entity.getPagoPaIntMode() ) )
+                .sourceChannel( entity.getSourceChannel() )
+                .sourceChannelDetails( entity.getSourceChannelDetails() )
+                .recipientIds(recipientIds )
+                .build());
     }
 
-    private List<NotificationRecipient> entity2RecipientDto(List<NotificationRecipientEntity> recipients) {
-        ModelMapper mapper = new ModelMapper();
-        mapper.getConfiguration().setMatchingStrategy(MatchingStrategies.STRICT);
-        mapper.createTypeMap( NotificationRecipientEntity.class, NotificationRecipient.class )
-                .addMapping( NotificationRecipientEntity::getRecipientId, NotificationRecipient::setInternalId );
+    private FullSentNotification.PagoPaIntModeEnum getSafePagoPaIntMode(String pagoPaIntMode) {
+        if(StringUtils.hasText( pagoPaIntMode )) {
+          return FullSentNotification.PagoPaIntModeEnum.fromValue( pagoPaIntMode );
+        }
+        return FullSentNotification.PagoPaIntModeEnum.NONE;
+    }
 
+    private List<NotificationRecipient> entity2RecipientsDto(List<NotificationRecipientEntity> recipients) {
         return recipients.stream()
-                .map( r -> mapper.map(r, NotificationRecipient.class))
-                .collect(Collectors.toList());
+                .map(this::entity2Recipient)
+                .toList();
     }
 
+    private NotificationRecipient entity2Recipient(NotificationRecipientEntity entity) {
+        return NotificationRecipient.builder()
+                .internalId( entity.getRecipientId() )
+                .recipientType( NotificationRecipient.RecipientTypeEnum.valueOf( entity.getRecipientType().getValue() ) )
+                .payment( entity2PaymentInfo( entity.getPayments() ) )
+                .build();
+    }
 
+    private NotificationPaymentInfo entity2PaymentInfo(List<NotificationPaymentInfoEntity> paymentList) {
+        NotificationPaymentInfo notificationPaymentInfo = null;
+        if ( !CollectionUtils.isEmpty( paymentList ) ) {
+            notificationPaymentInfo = NotificationPaymentInfo.builder()
+                    .creditorTaxId( paymentList.get( 0 ).getCreditorTaxId() )
+                    .noticeCode( paymentList.get( 0 ).getNoticeCode() )
+                    .noticeCodeAlternative( paymentList.size() > 1 ? paymentList.get( 1 ).getNoticeCode() : null )
+                    .pagoPaForm( entity2PaymentAttachment( paymentList.get( 0 ).getPagoPaForm() ) )
+                    .build();
+        }
+        return notificationPaymentInfo;
+    }
+
+    private NotificationPaymentAttachment entity2PaymentAttachment(PaymentAttachmentEntity pagoPaForm) {
+        NotificationPaymentAttachment paymentAttachment = null;
+        if ( Objects.nonNull( pagoPaForm ) ) {
+            paymentAttachment = NotificationPaymentAttachment.builder()
+                    .contentType( pagoPaForm.getContentType() )
+                    .digests( NotificationAttachmentDigests.builder()
+                            .sha256( pagoPaForm.getDigests().getSha256() )
+                            .build()
+                    )
+                    .ref( NotificationAttachmentBodyRef.builder()
+                            .key( pagoPaForm.getRef().getKey() )
+                            .versionToken( pagoPaForm.getRef().getVersionToken() )
+                            .build()
+                    )
+                    .build();
+        }
+        return paymentAttachment;
+    }
 
     private List<NotificationDocument> buildDocumentsList(NotificationEntity entity ) {
         List<NotificationDocument> result = new ArrayList<>();
@@ -74,7 +115,7 @@ public class EntityToDtoNotificationMapper {
         if( entity != null && entity.getDocuments() != null) {
             result = entity.getDocuments().stream()
                     .map( this::mapOneDocument )
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return result;
@@ -82,8 +123,6 @@ public class EntityToDtoNotificationMapper {
 
     private NotificationDocument mapOneDocument(DocumentAttachmentEntity entity ) {
         return entity == null ? null : NotificationDocument.builder()
-                .requiresAck( entity.getRequiresAck() )
-                .sendByMail( entity.getSendByMail() )
                 .title( entity.getTitle() )
                 .ref(NotificationAttachmentBodyRef.builder()
                         .versionToken( entity.getRef().getVersionToken() )
