@@ -1,5 +1,6 @@
 package it.pagopa.pn.delivery.rest;
 
+import it.pagopa.pn.commons.exceptions.PnRuntimeException;
 import it.pagopa.pn.commons.log.PnAuditLogBuilder;
 import it.pagopa.pn.commons.log.PnAuditLogEvent;
 import it.pagopa.pn.commons.log.PnAuditLogEventType;
@@ -9,11 +10,12 @@ import it.pagopa.pn.delivery.generated.openapi.server.v1.api.SenderReadB2BApi;
 import it.pagopa.pn.delivery.generated.openapi.server.v1.api.SenderReadWebApi;
 import it.pagopa.pn.delivery.generated.openapi.server.v1.dto.*;
 import it.pagopa.pn.delivery.models.InputSearchNotificationDto;
+import it.pagopa.pn.delivery.models.InternalAuthHeader;
 import it.pagopa.pn.delivery.models.InternalNotification;
 import it.pagopa.pn.delivery.models.ResultPaginationDto;
 import it.pagopa.pn.delivery.svc.NotificationAttachmentService;
 import it.pagopa.pn.delivery.svc.search.NotificationRetrieverService;
-import it.pagopa.pn.delivery.utils.ModelMapperFactory;
+import it.pagopa.pn.delivery.utils.InternalFieldsCleaner;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.http.ResponseEntity;
@@ -22,14 +24,14 @@ import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.request.NativeWebRequest;
-
+import it.pagopa.pn.delivery.svc.NotificationAttachmentService.InternalAttachmentWithFileKey;
 import java.nio.charset.StandardCharsets;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static it.pagopa.pn.commons.exceptions.PnExceptionsCodes.ERROR_CODE_PN_GENERIC_INVALIDPARAMETER_REQUIRED;
+
 
 @RestController
 @Slf4j
@@ -37,23 +39,31 @@ public class PnSentNotificationsController implements SenderReadB2BApi,SenderRea
 
     private final NotificationRetrieverService retrieveSvc;
     private final NotificationAttachmentService notificationAttachmentService;
-    private final ModelMapperFactory modelMapperFactory;
+    private final ModelMapper modelMapper;
 
-    public PnSentNotificationsController(NotificationRetrieverService retrieveSvc, NotificationAttachmentService notificationAttachmentService, ModelMapperFactory modelMapperFactory) {
+    public PnSentNotificationsController(NotificationRetrieverService retrieveSvc, NotificationAttachmentService notificationAttachmentService, ModelMapper modelMapper) {
         this.retrieveSvc = retrieveSvc;
         this.notificationAttachmentService = notificationAttachmentService;
-        this.modelMapperFactory = modelMapperFactory;
+        this.modelMapper = modelMapper;
     }
 
     @Override
     public ResponseEntity<FullSentNotification> getSentNotification(String xPagopaPnUid, CxTypeAuthFleet xPagopaPnCxType, String xPagopaPnCxId, String iun, List<String> xPagopaPnCxGroups) {
-        InternalNotification internalNotification = retrieveSvc.getNotificationInformationWithSenderIdCheck( iun, xPagopaPnCxId );
-        if ( NotificationStatus.IN_VALIDATION.equals( internalNotification.getNotificationStatus() ) ) {
-            log.info( "Unable to find notification with iun={} cause status={}", internalNotification.getIun(), internalNotification.getNotificationStatus() );
+        InternalNotification internalNotification = retrieveSvc.getNotificationInformationWithSenderIdCheck( iun, xPagopaPnCxId, xPagopaPnCxGroups );
+        PnAuditLogBuilder auditLogBuilder = new PnAuditLogBuilder();
+        PnAuditLogEvent logEvent = auditLogBuilder
+                .before(PnAuditLogEventType.AUD_NT_VIEW_SND, "getSenderNotification")
+                .iun(iun)
+                .build();
+        logEvent.log();
+        if ( NotificationStatus.IN_VALIDATION.equals( internalNotification.getNotificationStatus() )
+                || NotificationStatus.REFUSED.equals( internalNotification.getNotificationStatus() ) ) {
+            logEvent.generateFailure("Unable to find notification with iun={} cause status={}", internalNotification.getIun(), internalNotification.getNotificationStatus()).log();
             throw new PnNotificationNotFoundException( "Unable to find notification with iun="+ internalNotification.getIun() );
         }
-        ModelMapper mapper = modelMapperFactory.createModelMapper( InternalNotification.class, FullSentNotification.class );
-        FullSentNotification result = mapper.map( internalNotification, FullSentNotification.class );
+        InternalFieldsCleaner.cleanInternalFields( internalNotification );
+        FullSentNotification result = modelMapper.map( internalNotification, FullSentNotification.class );
+        logEvent.generateSuccess().log();
         return ResponseEntity.ok( result );
     }
 
@@ -64,10 +74,7 @@ public class PnSentNotificationsController implements SenderReadB2BApi,SenderRea
         PnAuditLogBuilder auditLogBuilder = new PnAuditLogBuilder();
         PnAuditLogEvent logEvent = auditLogBuilder
                 .before(PnAuditLogEventType.AUD_NT_SEARCH_SND, "searchSentNotification")
-                .cxId(xPagopaPnCxId)
-                .cxType(xPagopaPnCxType.toString())
                 .iun(iunMatch)
-                .uid(xPagopaPnUid)
                 .build();
         logEvent.log();
         InputSearchNotificationDto searchDto = new InputSearchNotificationDto().toBuilder()
@@ -87,12 +94,11 @@ public class PnSentNotificationsController implements SenderReadB2BApi,SenderRea
         ResultPaginationDto<NotificationSearchRow,String> serviceResult;
         NotificationSearchResponse response = new NotificationSearchResponse();
         try {
-            serviceResult =  retrieveSvc.searchNotification( searchDto );
-            ModelMapper mapper = modelMapperFactory.createModelMapper(ResultPaginationDto.class, NotificationSearchResponse.class );
-            response = mapper.map( serviceResult, NotificationSearchResponse.class );
+            serviceResult = retrieveSvc.searchNotification(searchDto, null, null);
+            response = modelMapper.map( serviceResult, NotificationSearchResponse.class );
             logEvent.generateSuccess().log();
-        } catch (Exception exc) {
-            logEvent.generateFailure(exc.getMessage()).log();
+        } catch (PnRuntimeException exc) {
+            logEvent.generateFailure("" + exc.getProblem()).log();
             throw exc;
         }
         return ResponseEntity.ok( response );
@@ -106,24 +112,33 @@ public class PnSentNotificationsController implements SenderReadB2BApi,SenderRea
     @Override
     public ResponseEntity<NewNotificationRequestStatusResponse> getNotificationRequestStatus(String xPagopaPnUid, CxTypeAuthFleet xPagopaPnCxType, String xPagopaPnCxId, List<String> xPagopaPnCxGroups, String notificationRequestId, String paProtocolNumber, String idempotenceToken) {
         InternalNotification internalNotification;
+        PnAuditLogBuilder auditLogBuilder = new PnAuditLogBuilder();
+        PnAuditLogEvent logEvent = auditLogBuilder
+                .before( PnAuditLogEventType.AUD_NT_CHECK, "getNotificationRequestStatus notificationRequestId={} paProtocolNumber={} idempotenceToken={}",
+                        notificationRequestId,
+                        paProtocolNumber,
+                        idempotenceToken)
+                .build();
+        logEvent.log();
         if (StringUtils.hasText( notificationRequestId )) {
             String iun = new String(Base64Utils.decodeFromString(notificationRequestId), StandardCharsets.UTF_8);
-            internalNotification = retrieveSvc.getNotificationInformationWithSenderIdCheck( iun, xPagopaPnCxId );
+            logEvent.getMdc().put("iun", iun);
+            internalNotification = retrieveSvc.getNotificationInformationWithSenderIdCheck( iun, xPagopaPnCxId, xPagopaPnCxGroups );
         } else {
             if ( !StringUtils.hasText( paProtocolNumber ) ) {
-                throw new PnInvalidInputException(ERROR_CODE_PN_GENERIC_INVALIDPARAMETER_REQUIRED, "paProtocolNumber" );
+                PnInvalidInputException e = new PnInvalidInputException(ERROR_CODE_PN_GENERIC_INVALIDPARAMETER_REQUIRED, "paProtocolNumber");
+                logEvent.generateFailure("[notificationRequestId={} idempotenceToken={}]" + e.getProblem(), notificationRequestId, idempotenceToken);
+                throw e;
             }
             if (!StringUtils.hasText( idempotenceToken ) ) {
-                throw new PnInvalidInputException(ERROR_CODE_PN_GENERIC_INVALIDPARAMETER_REQUIRED, "idempotenceToken" );
+                PnInvalidInputException e = new PnInvalidInputException(ERROR_CODE_PN_GENERIC_INVALIDPARAMETER_REQUIRED, "idempotenceToken");
+                logEvent.generateFailure("[notificationRequestId={} paProtocolNumber={}]" + e.getProblem(), notificationRequestId, paProtocolNumber);
+                throw e;
             }
-            internalNotification = retrieveSvc.getNotificationInformation( xPagopaPnCxId, paProtocolNumber, idempotenceToken);
+            internalNotification = retrieveSvc.getNotificationInformation( xPagopaPnCxId, paProtocolNumber, idempotenceToken, xPagopaPnCxGroups);
         }
-
-        ModelMapper mapper = modelMapperFactory.createModelMapper(
-                InternalNotification.class,
-                NewNotificationRequestStatusResponse.class
-        );
-        NewNotificationRequestStatusResponse response = mapper.map(
+        InternalFieldsCleaner.cleanInternalFields( internalNotification );
+        NewNotificationRequestStatusResponse response = modelMapper.map(
                 internalNotification,
                 NewNotificationRequestStatusResponse.class
         );
@@ -138,93 +153,98 @@ public class PnSentNotificationsController implements SenderReadB2BApi,SenderRea
             lastStatus = NotificationStatus.IN_VALIDATION;
         }
 
-        switch ( lastStatus ) {
-            case IN_VALIDATION: {
-                response.setNotificationRequestStatus( "WAITING" );
-                response.retryAfter( 10 );
-                response.setIun( null );
-                break;
+        switch (lastStatus) {
+            case IN_VALIDATION -> {
+                response.setNotificationRequestStatus("WAITING");
+                response.retryAfter(10);
+                response.setIun(null);
             }
-            case REFUSED: {
-                response.setNotificationRequestStatus( "REFUSED" );
-                response.setIun( null );
+            case REFUSED -> {
+                response.setNotificationRequestStatus("REFUSED");
+                response.setIun(null);
                 Optional<TimelineElement> timelineElement = internalNotification.getTimeline().stream().filter(
-                        tle -> TimelineElementCategory.REQUEST_REFUSED.equals( tle.getCategory() ) ).findFirst();
-                setRefusedErrors( response, timelineElement );
-                break; }
-            default: response.setNotificationRequestStatus( "ACCEPTED" );
+                        tle -> TimelineElementCategory.REQUEST_REFUSED.equals(tle.getCategory())).findFirst();
+                timelineElement.ifPresent(element -> setRefusedErrors(response, element));
+            }
+            default -> response.setNotificationRequestStatus("ACCEPTED");
         }
+
+        logEvent.generateSuccess().log();
         return ResponseEntity.ok( response );
     }
 
-    private void setRefusedErrors(NewNotificationRequestStatusResponse response, Optional<TimelineElement> timelineElement) {
-        if (timelineElement.isPresent() ) {
-            List<String> errors = timelineElement.get().getDetails().getErrors();
-            List<ProblemError> problemErrorList = errors.stream().map(
-                    error -> ProblemError.builder()
-                    .detail( error )
-                    .build()
-            ).collect(Collectors.toList());
-            response.setErrors( problemErrorList );
-        }
+    private void setRefusedErrors(NewNotificationRequestStatusResponse response, TimelineElement timelineElement) {
+        List<NotificationRefusedError> refusalReasons = timelineElement.getDetails().getRefusalReasons();
+        List<ProblemError> problemErrorList = refusalReasons.stream().map(
+                reason -> ProblemError.builder()
+                        .code( reason.getErrorCode() )
+                        .detail( reason.getDetail() )
+                        .build()
+        ).toList();
+        response.setErrors( problemErrorList );
     }
 
     @Override
     public ResponseEntity<NotificationAttachmentDownloadMetadataResponse> getSentNotificationAttachment(String xPagopaPnUid, CxTypeAuthFleet xPagopaPnCxType, String xPagopaPnCxId, String iun, Integer recipientIdx, String attachmentName, List<String> xPagopaPnCxGroups) {
-        NotificationAttachmentDownloadMetadataResponse response = new NotificationAttachmentDownloadMetadataResponse();
+        InternalAttachmentWithFileKey internalAttachmentWithFileKey = new InternalAttachmentWithFileKey();
         PnAuditLogBuilder auditLogBuilder = new PnAuditLogBuilder();
         PnAuditLogEvent logEvent = auditLogBuilder
                 .before(PnAuditLogEventType.AUD_NT_ATCHOPEN_SND, "getSentNotificationAttachment={}", attachmentName)
-                .uid(xPagopaPnUid)
                 .iun(iun)
-                .cxId(xPagopaPnCxId)
-                .cxType(xPagopaPnCxType.toString())
                 .build();
         logEvent.log();
         try {
-            response = notificationAttachmentService.downloadAttachmentWithRedirect( iun,
-                    xPagopaPnCxType.toString(),
-                    xPagopaPnCxId,
+            InternalAuthHeader internalAuthHeader = new InternalAuthHeader(xPagopaPnCxType.getValue(), xPagopaPnCxId, xPagopaPnUid, xPagopaPnCxGroups);
+            internalAttachmentWithFileKey = notificationAttachmentService.downloadAttachmentWithRedirectWithFileKey(
+                    iun,
+                    internalAuthHeader,
                     null,
                     recipientIdx,
                     attachmentName,
                     false
             );
-            logEvent.generateSuccess().log();
-        } catch (Exception exc) {
-            logEvent.generateFailure(exc.getMessage()).log();
+            if(internalAttachmentWithFileKey == null || internalAttachmentWithFileKey.getFileKey() == null){
+                logEvent.generateSuccess().log();
+            }else{
+                logEvent.getMdc().put("dockey", internalAttachmentWithFileKey.getFileKey());
+                logEvent.generateSuccess().log();
+            }
+        } catch (PnRuntimeException exc) {
+            logEvent.generateFailure("" + exc.getProblem()).log();
             throw exc;
         }
      
-        return ResponseEntity.ok( response );
+        return ResponseEntity.ok( internalAttachmentWithFileKey == null ? null : internalAttachmentWithFileKey.getDownloadMetadataResponse() );
     }
 
     @Override
     public ResponseEntity<NotificationAttachmentDownloadMetadataResponse> getSentNotificationDocument(String xPagopaPnUid, CxTypeAuthFleet xPagopaPnCxType, String xPagopaPnCxId, String iun, Integer docIdx, List<String> xPagopaPnCxGroups) {
-        NotificationAttachmentDownloadMetadataResponse response = new NotificationAttachmentDownloadMetadataResponse();
+        InternalAttachmentWithFileKey internalAttachmentWithFileKey = new InternalAttachmentWithFileKey();
         PnAuditLogBuilder auditLogBuilder = new PnAuditLogBuilder();
         PnAuditLogEvent logEvent = auditLogBuilder
                 .before(PnAuditLogEventType.AUD_NT_DOCOPEN_SND, "getSentNotificationDocument={}", docIdx)
-                .uid(xPagopaPnUid)
                 .iun(iun)
-                .cxId(xPagopaPnCxId)
-                .cxType(xPagopaPnCxType.toString())
                 .build();
         logEvent.log();
         try {
-            response = notificationAttachmentService.downloadDocumentWithRedirect(
+            InternalAuthHeader internalAuthHeader = new InternalAuthHeader(xPagopaPnCxType.getValue(), xPagopaPnCxId, xPagopaPnUid, xPagopaPnCxGroups);
+            internalAttachmentWithFileKey = notificationAttachmentService.downloadDocumentWithRedirectWithFileKey(
                     iun,
-                    xPagopaPnCxType.toString(),
-                    xPagopaPnCxId,
+                    internalAuthHeader,
                     null,
                     docIdx,
                     false
             );
-            logEvent.generateSuccess().log();
-        } catch (Exception exc) {
-            logEvent.generateFailure(exc.getMessage()).log();
+            if(internalAttachmentWithFileKey == null || internalAttachmentWithFileKey.getFileKey() == null){
+                logEvent.generateSuccess().log();
+            }else{
+                logEvent.getMdc().put("dockey", internalAttachmentWithFileKey.getFileKey());
+                logEvent.generateSuccess().log();
+            }
+        } catch (PnRuntimeException exc) {
+            logEvent.generateFailure("" + exc.getProblem()).log();
             throw exc;
         }
-        return ResponseEntity.ok( response );
+        return ResponseEntity.ok( internalAttachmentWithFileKey == null ? null : internalAttachmentWithFileKey.getDownloadMetadataResponse() );
     }
 }
